--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.6.5",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.488.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^6.30.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.2"
   },
   "devDependencies": {
