--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.488.0",
     "react": "^18.2.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^6.30.0",
